# dashboards

./: .gitignore  .pre-commit-config.yaml  README.md  devenv.nix  index.html  justfile  observablehq.config.js  package-lock.json  package.json  publiccode.yaml  publiccode.yml  pyproject.toml  requirements.in  requirements.txt  roter_faden
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/workflows/: main.yml  pr-preview.yml
_observablehq/: client.17f4b988.js  client.2e1bd443.js  client.3c3e4dc3.js  client.44bd4104.js  client.4b5c140c.js  client.4df3afc6.js  client.6171904a.js  client.7562fc56.js  client.8fcfdc7b.js  stdlib.576a058a.js  stdlib.9280e4b7.js  stdlib.c41ec614.js
barrierefreiheit/: index.html
cds/: index.html
dwd/: index.html
legal/: index.html
leichte-sprache/: index.html
lubw/: index.html
maites_notebooks/: Wetterstationen_Glimpse.ipynb  Wetterstationen_Glimpse_comment.ipynb  daten.csv  lcz.ipynb  script.js  styles.css  wetterstationen_glimpse.ipynb  wetterstationen_glimpse_aktuell.ipynb
majas_notebooks/: Karte_Konstanz.ipynb  Karte_der_Messstationen.ipynb  Kleinräumige_Gliederung_4330766187849128049.geojson  Pizza.ipynb  Willis_tif.ipynb  air_data.ipynb  andere_dwd_standorte.ipynb  dwd.ipynb  dwd_Standortwechsel.ipynb  interaktive_Karte.ipynb  weather_data.ipynb  wolperlab.ipynb
paulas_notebooks/: dwd.ipynb
raphael/: ws_compl_summer.csv
richards_notebooks/: SGC-K-Sensoren_Analyse.ipynb  SGC-K_Präsentation.key  SGC-K_Sensoren.ipynb  interpol_time_series.ipynb
src/: index.md
stadtklima/: index.html
(+218 files in other folders)
