[project]
name = "sgc-dashboards"
version = "0.1.0"
requires-python = ">=3.12.1"
dependencies = [
    "duckdb>=1.1.3",
    "httpx>=0.28.1",
    "pandas>=2.2.3",
    "pyarrow>=18.1.0",
]

[dependency-groups]
dev = [
    "notebook>=7.3.2",
    "pre-commit>=4.0.1",
    "ruff>=0.9.1",
    "seaborn>=0.13.2",
]

[tool.ruff]
exclude = [
    "src/correlaid/drafts"
]